# zephyr

./: MAINTAINERS.yml
boards/arm/npcm400f_evb/: fun_id.h  npcm400f_evb.dts  npcm400f_evb_defconfig
boards/arm64/npcm8xx_evb/: Kconfig.board  Kconfig.defconfig  npcm8xx_evb.dts  npcm8xx_evb.yaml  npcm8xx_evb_defconfig
boards/nuvoton/npcm400_evb/: npcm400_evb.dts  npcm400_evb.yaml  npcm400_evb_defconfig
drivers/clock_control/: clock_control_npcm.c
drivers/espi/: espi_npcm4xx.c
drivers/flash/: spi_nor_multi_dev.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.npcm  gpio_npcm.c
drivers/i2c/: i2c_npcm4xx.c
drivers/i3c/: CMakeLists.txt  i3c_npcm4xx.c
drivers/i3c/NPCM4XX/: i3c_core.c  i3c_master.c  i3c_slave.c
drivers/i3c/slave/: i3c_slave_mqueue.c
drivers/misc/npcm/: snoop_npcm.c
drivers/peci/: Kconfig.npcm4xx  peci_npcm4xx.c
drivers/pinctrl/: pinctrl_npcm.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.npcm  uart_npcm.c  uart_ns16550.c
dts/arm/nuvoton/: npcm400f.dtsi  npcm4xx.dtsi
dts/arm/nuvoton/npcm/: npcm.dtsi  npcm4.dtsi
dts/arm/nuvoton/npcm/npcm4/: npcm4-pinmux.dtsi
dts/arm64/nuvoton/: nuvoton-common-npcm8xx.dtsi
dts/bindings/gpio/: nuvoton,npcm-gpio.yaml
dts/bindings/i3c/: i3c-controller.yaml  nuvoton,npcm4xx-i3c.yaml
dts/bindings/pinctrl/: nuvoton,npcm-pinctrl.yaml
dts/bindings/serial/: nuvoton,nct6694b-uart.yaml  nuvoton,npcm-uart.yaml
include/drivers/i3c/NPCM4XX/: i3c_drv.h  pub_I3C.h
include/zephyr/drivers/gpio/: gpio_npcm.h
include/zephyr/dt-bindings/clock/: npcm_clock.h
include/zephyr/dt-bindings/gpio/: nuvoton-npcm-gpio.h
kernel/: work.c
soc/arm/npcm4xx/: CMakeLists.txt
soc/arm/npcm4xx/common/: cp_reg.h  regs.h
soc/arm/npcm4xx/common/ImageGenerator/: FunctionDefine.py  ImageGenerator.py  NuMsCNG.py  NuPKCS11.py  OpenSSL.py  Util.py  XmlParser.py
soc/arm/npcm4xx/common/ImageGenerator/Key/: RSA3072key_pri.der  RSA3072key_pri.pem  RSA3072key_pub.der  RSA3072key_pub.pem
soc/arm/npcm4xx/common/ImageGenerator/Xml/: _NTC_config.xml
soc/arm/npcm4xx/common/NuveSIOBinGenTool/: Crypto.py  FunctionDefine.py  NuveSIOBinGenTool.bat  NuveSIOBinGenTool.py  NuveSIOBinGenTool_internal.bat  NuveSIOBinGenTool_model.bat  Util.py  XmlParser.py
soc/arm/npcm4xx/common/NuveSIOBinGenTool/Key/: AES.enc  ECDSA256key_pri.der  ECDSA256key_pri.pem  ECDSA256key_pub.der  ECDSA256key_pub.pem  ECDSA384key_pri.der  ECDSA384key_pri.pem  ECDSA384key_pub.der  ECDSA384key_pub.pem  ECDSA521key_pri.der  ECDSA521key_pri.pem  ECDSA521key_pub.der  ECDSA521key_pub.pem  RSA2048key_pri.der  RSA2048key_pri.pem  RSA2048key_pub.der  RSA2048key_pub.pem  RSA4096key_pri.der  RSA4096key_pri.pem  RSA4096key_pub.der  RSA4096key_pub.pem
soc/arm/npcm4xx/common/NuveSIOBinGenTool/Xml/: _Model.xml  _NTC_Internal.xml
soc/arm/npcm4xx/common/reg/: reg_def.h
soc/arm/npcm4xx/npcm400f/: Kconfig.defconfig.series  header.c  pin_def_list.h  sig_def_list.h  soc.h
soc/arm64/nuvoton_npcm8xx/: Kconfig.defconfig  Kconfig.soc  linker.ld  mmu_regions.c
soc/nuvoton/npcm/common/: pinctrl_soc.h
tests/boards/npcm400f_evb/: prj.conf
tests/boards/npcm400f_evb/boards/: npcm400f_evb.overlay
tests/boards/npcm400f_evb/src/: i3c.c  main.c
tests/drivers/i2c/i2c_slave_api/boards/: npcm400f_evb.overlay
